--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "check:docs-sync": "bun run scripts/check-docs-sync.ts"
   },
   "dependencies": {
-    "@opentui/core": "^0.1.80",
-    "@reduxjs/toolkit": "^2.11.2"
+    "@opentui/core": "^0.1.81",
+    "@opentui/react": "^0.1.81",
+    "@reduxjs/toolkit": "^2.11.2",
+    "react": "^19.2.4",
+    "react-redux": "^9.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.14",
+    "bun-types": "^1.3.9"
   }
 }
